# SteamworksMinimalClientServer

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  client_main.cpp
server/: CMakeLists.txt  server.cpp  server.h  server_main.cpp
